/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    `maven-publish`
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compileOnly(libs.org.projectlombok.lombok)
    annotationProcessor(libs.org.projectlombok.lombok)
    implementation(libs.org.apache.commons)

    implementation(libs.net.minestom)
    implementation(libs.org.slf4j)
    implementation(libs.ch.qos.logback)

    testImplementation(libs.org.junit.jupiter)
}

group = "org.example"
version = "0.0.10"
description = "toy-language"
java.sourceCompatibility = JavaVersion.VERSION_21

tasks.withType<Test> {
    useJUnitPlatform()
    systemProperty("line.separator", "\n")
}

tasks.register<JavaExec>("runToyLanguage") {
    mainClass.set("org.example.toylanguage.RunToyLanguage")
    classpath = sourceSets["main"].runtimeClasspath
    standardInput = System.`in`
}

tasks.register<JavaExec>("runServer") {
    mainClass.set("codes.shiftmc.coding.server.Server")
    classpath = sourceSets["main"].runtimeClasspath
    standardInput = System.`in`
}

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}
